style/checkout.css
.checkout_form{
    background-color: #FFD25A;
    background-size: cover;
}

.total_wrapper{
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    margin: 0 20px 10px 20px;
    background-color: #FFD25A;
    border-radius: 9px;
}

.total_count{
    margin: 0;
    font-family: 'Georgia', sans-serif;
    font-style: normal;
    font-weight: 400;
    font-size: 17px;
    line-height: 22.1px;
    letter-spacing: 0.06em;
    color: #292929;
    margin-right: 5px;
}

.total_name{
    margin: 0;
    font-family: 'Georgia', sans-serif;
    font-style: normal;
    font-weight: 400;
    font-size: 17px;
    line-height: 22.1px;
    letter-spacing: 0.06em;
    margin-left: 5px;
}

.total_inner{
    display: flex;
    flex-direction: row;
    align-items: center;
    border-radius: 100px;
    padding: 4px;
}

.checkout{
    background-color: #F9D876;
    margin-top: 30%;
}

.payment_wrapper{
    width: 630px;
    background-color: #F6F6F6;
    border-radius: 9px;
    margin-top: 20%;
}

.payment_inner{
    display: flex;
    flex-direction: column;
    justify-content: center;
    margin: 10px;
    gap: 10px;
}

.payment_logo{
    display: flex;
    flex-direction: row;
    align-items: center;
}
.delivery{
    display: flex;
    flex-direction: column;
}

.logo{
    width: 40px;
    height: 40px;
    background-image: url("../icons/card_light.svg");
    background-position: center;
    background-repeat: no-repeat;
    display: inline-flex;
    border-radius: 100px;
}

.cart_container{
    display: flex;
    flex-direction: column;
    gap: 10px;
    background: white;
    border-radius: 9px;
    padding: 20px;
    max-height: 200px;
    overflow: scroll;
}

.input_element{
    display: flex;
    flex-direction: column;
}

input:invalid:required {
    border: 1px solid #FF785A;
}


.text_form{
    display: flex;
    flex-wrap: wrap;
    gap: 10px;
    justify-content: center;
}


.gift{
    display: flex;
    flex-direction: column;
}

.validate{
    width: 150px;
    height: 10px;
    padding: 10px 10px 10px 10px;
    border-radius: 9px;
    border: 1px solid green;
}

label{
    font-family: 'Georgia', sans-serif;
    font-style: normal;
    font-weight: 400;
    font-size: 17px;
    line-height: 22.1px;
    letter-spacing: 0.06em;
    max-width: 150px;
}

.inner_element{
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    margin-left: 5px;
}

.subtitle{
    margin: 15px 0 5px 0;
}



.options{
    display: flex;
    justify-content: flex-start;
    margin-left: 40px;
    gap: 20px;
}


.item{
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

.item_name{
    margin: 0;
    font-family: 'Georgia', sans-serif;
    font-style: normal;
    font-weight: 400;
    font-size: 14px;
    line-height: 22.1px;
    letter-spacing: 0.06em;
}

.item_price{
    margin: 0;
    font-family: 'Georgia', sans-serif;
    font-style: normal;
    font-weight: 400;
    font-size: 14px;
    line-height: 22.1px;
    letter-spacing: 0.06em;
}

.cart_total{
    display: flex;
    justify-content: end;
    margin-right: 40px;
}

.modal_complete{
    display: flex;
    flex-direction: column;
    gap: 20px;
    text-align: center;
    margin-top: 20%;
}

.complete-modal{
    width: 400px;
    height: 400px;
}

.title_complete{
    font-family: 'Georgia', sans-serif;
    font-style: normal;
    font-weight: 400;
    font-size: 26px;
    line-height: 22.1px;
    letter-spacing: 0.06em;
    color: #292929;
    margin: 0;

}
.order_description{
    display: flex;
    flex-direction: column;
    gap: 25px;
}
.description_name, .description_date, .description_address, .total_text{
    font-family: 'Georgia', sans-serif;
    font-style: normal;
    font-weight: 400;
    font-size: 17px;
    line-height: 22.1px;
    letter-spacing: 0.06em;
    margin: 0;
}

.input_card{
    margin-left: 5px;
}

.error{
    font-family: 'Georgia', sans-serif;
    font-style: normal;
    color: #FF785A;
    font-weight: 400;
    font-size: 11px;
    line-height: 22.1px;
    letter-spacing: 0.06em;
    margin: 0;
}

